--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -19,7 +19,7 @@ a {
 }
 
 a:hover {
-  color: #51cdbe;
+  color: #49cbbb;
   text-decoration: none;
 }
 
@@ -210,7 +210,7 @@ h6 {
   height: 2px;
   bottom: -5px;
   left: 0;
-  background-color: #34b7a7;
+  background-color: #b73434;
   visibility: hidden;
   width: 0px;
   transition: all 0.3s ease-in-out 0s;
@@ -405,7 +405,7 @@ h6 {
   font-size: 48px;
   font-weight: 700;
   line-height: 56px;
-  color: #222222;
+  color: #dfd9d9;
 }
 #hero h2 {
   color: #6f6f6f;
@@ -1140,7 +1140,7 @@ section {
   font-size: 13px;
 }
 #footer .credits a {
-  color: #34b7a7;
+  color: #020202;
 }
 #app {
   padding-top: 100px;
