Adjusted css for home page

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -404,11 +404,11 @@ h6 {
   margin: 0;
   font-size: 48px;
   font-weight: 700;
-  line-height: 56px;
+  line-height: 150px;
   color: #dfd9d9;
 }
 #hero h2 {
-  color: #6f6f6f;
+  color: #dfd9d9;
   margin: 10px 0 0 0;
   font-size: 22px;
 }
@@ -424,10 +424,10 @@ h6 {
   transition: 0.5s;
   margin-top: 30px;
   color: #fff;
-  background: #34b7a7;
+  background: #b73434;
 }
 #hero .btn-about:hover {
-  background: #3dc8b7;
+  background: #a7b623;
 }
 @media (min-width: 1024px) {
   #hero {
