Changed each card on profile page to have date and time created as way of tracking.

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -427,7 +427,7 @@ h6 {
   background: #b73434;
 }
 #hero .btn-about:hover {
-  background: #a7b623;
+  background: #b68323;
 }
 @media (min-width: 1024px) {
   #hero {
