Changed workout page css

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -556,7 +556,7 @@ section {
 .about .content ul i {
   font-size: 20px;
   padding-right: 2px;
-  color: #34b7a7;
+  color: #b73434;
 }
 .about .content p:last-child {
   margin-bottom: 0;
