--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -14,12 +14,12 @@ body {
 }
 
 a {
-  color: #34b7a7;
+  color: #cb4949;
   text-decoration: none;
 }
 
 a:hover {
-  color: #49cbbb;
+  color: #cb4949;
   text-decoration: none;
 }
 
@@ -60,7 +60,7 @@ h6 {
   position: fixed;
   top: calc(50% - 30px);
   left: calc(50% - 30px);
-  border: 6px solid #34b7a7;
+  border: 6px solid #cb4949;
   border-top-color: #dcf5f2;
   border-radius: 50%;
   width: 60px;
@@ -96,7 +96,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #34b7a7;
+  background: #cb4949;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -161,7 +161,7 @@ h6 {
   font-size: 16px;
 }
 .header-social-links a:hover {
-  color: #34b7a7;
+  color: #cb4949;
 }
 
 /*--------------------------------------------------------------
@@ -258,7 +258,7 @@ h6 {
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover > a {
-  color: #34b7a7;
+  color: #cb4949;
 }
 .navbar .dropdown:hover > ul {
   opacity: 1;
@@ -347,7 +347,7 @@ h6 {
 .navbar-mobile a:hover,
 .navbar-mobile .active,
 .navbar-mobile li:hover > a {
-  color: #34b7a7;
+  color: #cb4949;
 }
 .navbar-mobile .getstarted,
 .navbar-mobile .getstarted:focus {
@@ -376,7 +376,7 @@ h6 {
 .navbar-mobile .dropdown ul a:hover,
 .navbar-mobile .dropdown ul .active:hover,
 .navbar-mobile .dropdown ul li:hover > a {
-  color: #34b7a7;
+  color: #cb4949;
 }
 .navbar-mobile .dropdown > .dropdown-active {
   display: block;
@@ -483,7 +483,7 @@ section {
   display: block;
   width: 50px;
   height: 3px;
-  background: #34b7a7;
+  background: #cb4949;
   bottom: 0;
   left: calc(50% - 25px);
 }
@@ -522,8 +522,8 @@ section {
   color: #fff;
 }
 .cta .cta-btn:hover {
-  background: #34b7a7;
-  border: 2px solid #34b7a7;
+  background: #cb4949;
+  border: 2px solid #cb4949;
 }
 @media (max-width: 1024px) {
   .cta {
@@ -591,7 +591,7 @@ section {
   width: 1px;
   height: 10px;
   transition: 0.9s;
-  background-color: #34b7a7;
+  background-color: #cb4949;
 }
 
 /*--------------------------------------------------------------
@@ -600,7 +600,7 @@ section {
 .facts .counters span {
   font-size: 48px;
   display: block;
-  color: #34b7a7;
+  color: #cb4949;
 }
 .facts .counters p {
   padding: 0;
@@ -673,10 +673,10 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #34b7a7;
+  border: 1px solid #cb4949;
 }
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #34b7a7;
+  background-color: #cb4949;
 }
 
 /*--------------------------------------------------------------
@@ -692,7 +692,7 @@ section {
 .resume .resume-item {
   padding: 0 0 20px 20px;
   margin-top: -2px;
-  border-left: 2px solid #34b7a7;
+  border-left: 2px solid #cb4949;
   position: relative;
 }
 .resume .resume-item h4 {
@@ -710,7 +710,7 @@ section {
   display: inline-block;
   font-weight: 600;
   margin-bottom: 10px;
-  color: #34b7a7;
+  color: #cb4949;
 }
 .resume .resume-item ul {
   padding-left: 20px;
@@ -730,7 +730,7 @@ section {
   left: -9px;
   top: 0;
   background: #fff;
-  border: 2px solid #34b7a7;
+  border: 2px solid #cb4949;
 }
 
 /*--------------------------------------------------------------
@@ -864,7 +864,7 @@ section {
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
   color: #fff;
-  background: #34b7a7;
+  background: #cb4949;
 }
 .portfolio #portfolio-flters li:last-child {
   margin-right: 0;
@@ -961,10 +961,10 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #34b7a7;
+  border: 1px solid #cb4949;
 }
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #34b7a7;
+  background-color: #cb4949;
 }
 .portfolio-details .portfolio-info {
   padding: 30px;
@@ -1006,7 +1006,7 @@ section {
 }
 .contact .info i {
   font-size: 20px;
-  color: #34b7a7;
+  color: #cb4949;
   float: left;
   width: 44px;
   height: 44px;
@@ -1037,7 +1037,7 @@ section {
 .contact .info .email:hover i,
 .contact .info .address:hover i,
 .contact .info .phone:hover i {
-  background: #34b7a7;
+  background: #cb4949;
   color: #fff;
 }
 .contact .php-email-form {
@@ -1089,7 +1089,7 @@ section {
 }
 .contact .php-email-form input:focus,
 .contact .php-email-form textarea:focus {
-  border-color: #34b7a7;
+  border-color: #cb4949;
 }
 .contact .php-email-form input {
   height: 44px;
@@ -1098,7 +1098,7 @@ section {
   padding: 10px 12px;
 }
 .contact .php-email-form button[type="submit"] {
-  background: #34b7a7;
+  background: #cb4949;
   border: 0;
   padding: 10px 30px 12px 30px;
   color: #fff;
