Changed a whole bunch of CSS

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -115,6 +115,78 @@ h6 {
   visibility: visible;
   opacity: 1;
 }
+/*--------------------------------------------------------------
+# Sign Up Page
+--------------------------------------------------------------*/
+#signup {
+  width: 100%;
+  height: 100vh;
+  background: url("../img/signup.jpg") top right;
+  background-size: cover;
+}
+#signup h1 {
+  margin: 0;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 150px;
+  color: #dfd9d9;
+}
+#signup h2 {
+  color: #dfd9d9;
+  margin: 10px 0 0 0;
+  font-size: 22px;
+}
+/*--------------------------------------------------------------
+# Login Page
+--------------------------------------------------------------*/
+#login {
+  width: 100%;
+  height: 100vh;
+  background: url("../img/login.jpg") top right;
+  background-size: cover;
+}
+#login h1 {
+  margin: 0;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 150px;
+  color: #dfd9d9;
+}
+#login h2 {
+  color: #dfd9d9;
+  margin: 10px 0 0 0;
+  font-size: 22px;
+}
+/*--------------------------------------------------------------
+# Generate Workout Page
+--------------------------------------------------------------*/
+#generate {
+  width: 100%;
+  height: 100vh;
+  background: url("../img/workoutpage.jpg") top right;
+  background-size: cover;
+  padding-left: 10px;
+}
+#generate .container {
+  display: grid;
+  width: 100%;
+  height: 100%;
+  grid-template-columns: 1fr 5fr 1fr;
+  grid-template-rows: 1fr 10fr 1fr;
+}
+#generate h1 {
+  margin: 0;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 50 px;
+  color: #dfd9d9;
+  position: center;
+}
+#generate h2 {
+  color: #dfd9d9;
+  margin: 10px 0 0 0;
+  font-size: 15px;
+}
 
 /*--------------------------------------------------------------
 # Header
@@ -392,7 +464,7 @@ h6 {
   background-size: cover;
 }
 #hero .container {
-  padding-top: 70px;
+  padding-top: 80px;
   position: relative;
 }
 @media (max-width: 992px) {
@@ -600,7 +672,7 @@ section {
 .facts .counters span {
   font-size: 48px;
   display: block;
-  color: #cb4949;
+  color: #030303;
 }
 .facts .counters p {
   padding: 0;
