Last commit before presentation

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -232,6 +232,10 @@ h6 {
   font-size: 20px;
 }
 /*--------------------------------------------------------------
+# About Page
+--------------------------------------------------------------*/
+
+/*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
 #header {
